# SonicWave

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.dev.toml  config.toml  docker-compose.yml  index.html
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  release.yml
assets/: app.js  audio-process.js  ffmpeg-utils.js  file-handler.js  styles.css  ui.js
src/: main.rs
