[package]
name = "sonic-wave"
version = "0.1.0"
edition = "2021"
description = "A fast, client-side audio converter powered by FFmpeg.wasm"
authors = ["Your Name"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "set-header"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
